--- a/d3tiknom.html
+++ b/d3tiknom.html
@@ -17,16 +17,8 @@
 <body>
 
 <h1>d3tiknom</h1>
-<!--<p class="info">Name: Your Name; E-Mail: Your E-Mail; UID: Your UID</p>-->
-<div id="year-chart" class="view">
-</div>
-
-
-<!--<div id = "shiftChart" class = "view">-->
-<!--<h3>Brush selection is: </h3>-->
-<!--<span id="stateList"></span>-->
-<!--</div>-->
-
+<p class="info">Name: Sam Olds; E-Mail: Your E-Mail; UID: Your UID</p>
+<p class="info">Name: Jesus Zarate; E-Mail: jesus.zarate@utah.edu; UID: u0816141</p>
 
 
 <div id="dashboard" class="view">
