--- a/about.html
+++ b/about.html
@@ -35,48 +35,34 @@
             <a class="nav-link" href="/about.html">About</a>
           </li>
         </ul>
-        <!--
-        TODO: this would be really nice to be able to search for gubbins
-        <form class="form-inline mt-2 mt-md-0">
-          <input class="form-control mr-sm-2" type="text" placeholder="Search"
-              aria-label="Search">
-          <button class="btn btn-outline-success my-2 my-sm-0"
-              type="submit">Search</button>
-        </form>
-        -->
       </div>
     </nav>
   </header>
 
-  <div class="container-fluid">
-    <div class="row">
-      <nav id="dashboard"
-          class="col-sm-3 col-md-2 d-none d-sm-block bg-light sidebar">
-          <img src="static/img/loading2.gif" alt="Loading" id="loading-gif"
-              class="loading-vis">
-      </nav>
-
-      <main role="main" class="col-sm-9 ml-sm-auto col-md-10 pt-3">
-        <div class="visualization">
-          <svg width="500" height="400" id="bar-chart">
-            <g id="barchart-svg">
-              <g id="xAxis"></g>
-              <g id="yAxis"></g>
-              <g id="bars"></g>
-            </g>
-          </svg>
-        </div>
-      </main>
+  <main role="main" class="container about">
+    <div class="jumbotron">
+      <h1 class="display-3">d3tiknom</h1>
+      <p class="lead">
+        This is a Data Visualization project for
+        <a href="http://dataviscourse.net/2017/syllabus">CS 6630</a> at the
+        University of Utah. This project uses a <a
+        href="http://getbootstrap.com/docs/4.0/examples/dashboard">dashboard example theme</a>
+        from Bootstrap for the layout. It also utilizes
+        <a href="https://d3js.org">D3</a> to render the visualizations.
+      </p>
+      <p>Sam Olds, samolds@yahoo.com, u0742533</p>
+      <p>Jesus Zarate jesus.zarate@utah.edu, u0816141</p>
     </div>
-  </div>
+  </main>
 
-  <script src="static/vendor/js/d3.min.js" type="text/javascript"></script>
-  <script src="static/vendor/js/d3-tip.js" type="text/javascript"></script>
   <script src="static/vendor/js/jquery-3.2.1.slim.min.js"
       type="text/javascript"></script>
   <script src="static/vendor/js/bootstrap4.bundle.min.js"
       type="text/javascript"></script>
-  <script src="static/js/script.js" type="text/javascript"></script>
-  <script src="static/js/dashboard.js" type="text/javascript"></script>
 </body>
 </html>
+
+
+
+
+
