--- a/index.html
+++ b/index.html
@@ -56,15 +56,55 @@
               class="loading-vis">
       </nav>
 
-      <main role="main" class="col-sm-9 ml-sm-auto col-md-10 pt-3">
-        <div class="visualization">
-          <svg width="500" height="400" id="bar-chart">
-            <g id="barchart-svg">
-              <g id="xAxis"></g>
-              <g id="yAxis"></g>
-              <g id="bars"></g>
-            </g>
-          </svg>
+      <main role="main" class="col-sm-9 ml-sm-auto col-md-10">
+        <div class="row text-center">
+          <div class="col-sm-6 visualization">
+            <svg width="100%" height="100%" id="box-plot">
+              <g class="svg-plot">
+                <g class="xAxis"></g>
+                <g class="yAxis"></g>
+                <g class="bars"></g>
+              </g>
+            </svg>
+            <h4>Box Plot</h4>
+            <div class="text-muted">Something else</div>
+          </div>
+          <div class="col-sm-6 visualization">
+            <svg width="100%" height="100%" id="stack-trace-plot">
+              <g class="svg-plot">
+                <g class="xAxis"></g>
+                <g class="yAxis"></g>
+                <g class="bars"></g>
+              </g>
+            </svg>
+            <h4>Stack Trace Timing</h4>
+            <span class="text-muted">Something else</span>
+          </div>
+        </div>
+        <div class="clearfix"></div>
+        <div class="row text-center">
+          <div class="col-sm-6 visualization">
+            <svg width="100%" height="100%" id="comparison-plot">
+              <g class="svg-plot">
+                <g class="xAxis"></g>
+                <g class="yAxis"></g>
+                <g class="bars"></g>
+              </g>
+            </svg>
+            <h4>Comparison</h4>
+            <span class="text-muted">Something else</span>
+          </div>
+          <div class="col-sm-6 visualization">
+            <svg width="100%" height="100%" id="dot-plot">
+              <g class="svg-plot">
+                <g class="xAxis"></g>
+                <g class="yAxis"></g>
+                <g class="bars"></g>
+              </g>
+            </svg>
+            <h4>Dot Plot</h4>
+            <span class="text-muted">Something else</span>
+          </div>
         </div>
       </main>
     </div>
