--- a/index.html
+++ b/index.html
@@ -10,10 +10,8 @@
   <title>d3tiknom</title>
   <link href="static/vendor/css/bootstrap4.min.css" rel="stylesheet">
   <link href="static/vendor/css/dashboard.css" rel="stylesheet">
+  <link href="static/vendor/css/googlefonts.css" rel="stylesheet">
   <link href="static/css/style.css" rel="stylesheet">
-
-  <link href="https://fonts.googleapis.com/css?family=Arvo" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
 </head>
 
 <body>
@@ -50,7 +48,7 @@
 
   <div class="container-fluid">
     <div class="row">
-      <nav id="dashboard"
+      <nav id="navigator"
           class="col-sm-3 col-md-2 d-none d-sm-block bg-light sidebar">
           <img src="static/img/loading2.gif" alt="Loading" id="loading-gif"
               class="loading-vis">
@@ -59,7 +57,7 @@
       <main role="main" class="col-sm-9 ml-sm-auto col-md-10">
         <div class="row text-center">
           <div class="col-sm-6 visualization">
-            <svg width="100%" height="100%" id="box-plot">
+            <svg width="100%" height="80%" id="box-plot">
               <g class="svg-plot">
                 <g class="xAxis"></g>
                 <g class="yAxis"></g>
@@ -70,7 +68,7 @@
             <div class="text-muted">Something else</div>
           </div>
           <div class="col-sm-6 visualization">
-            <svg width="100%" height="100%" id="stack-trace-plot">
+            <svg width="100%" height="80%" id="stack-trace-plot">
               <g class="svg-plot">
                 <g class="xAxis"></g>
                 <g class="yAxis"></g>
@@ -84,7 +82,7 @@
         <div class="clearfix"></div>
         <div class="row text-center">
           <div class="col-sm-6 visualization">
-            <svg width="100%" height="100%" id="comparison-plot">
+            <svg width="100%" height="80%" id="comparison-plot">
               <g class="svg-plot">
                 <g class="xAxis"></g>
                 <g class="yAxis"></g>
@@ -95,7 +93,7 @@
             <span class="text-muted">Something else</span>
           </div>
           <div class="col-sm-6 visualization">
-            <svg width="100%" height="100%" id="dot-plot">
+            <svg width="100%" height="80%" id="dot-plot">
               <g class="svg-plot">
                 <g class="xAxis"></g>
                 <g class="yAxis"></g>
@@ -116,7 +114,9 @@
       type="text/javascript"></script>
   <script src="static/vendor/js/bootstrap4.bundle.min.js"
       type="text/javascript"></script>
-  <script src="static/js/script.js" type="text/javascript"></script>
-  <script src="static/js/dashboard.js" type="text/javascript"></script>
+
+  <script src="static/js/data.js" type="text/javascript"></script>
+  <script src="static/js/plots.js" type="text/javascript"></script>
+  <script src="static/js/navigator.js" type="text/javascript"></script>
 </body>
 </html>
