--- a/index.html
+++ b/index.html
@@ -48,10 +48,14 @@
 
   <div class="container-fluid">
     <div class="row">
-      <nav id="navigator"
-          class="col-sm-3 col-md-2 d-none d-sm-block bg-light sidebar">
+      <nav class="col-sm-3 col-md-2 d-none d-sm-block bg-light sidebar">
+          <div id="navigator"></div>
           <img src="static/img/loading2.gif" alt="Loading" id="loading-gif"
-              class="loading-vis">
+              class="loading-vis center">
+          <div class="text-center top-margin">
+              <button id="plot-clearer" type="button"
+                  class="btn btn-danger">Clear Plots</button>
+          </div>
       </nav>
 
       <main role="main" class="col-sm-9 ml-sm-auto col-md-10">
