adding additional navigation dropdowns instead of all in sidebar

--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
       <main role="main" class="col-sm-9 ml-sm-auto col-md-10">
         <div class="row text-center">
           <div class="col-sm-6 visualization">
+            <form class="target-selectors"></form>
             <svg width="100%" height="80%" id="box-plot">
               <g class="svg-plot">
                 <g class="xAxis"></g>
@@ -72,6 +73,7 @@
             <div class="text-muted">Something else</div>
           </div>
           <div class="col-sm-6 visualization">
+            <form class="target-selectors"></form>
             <svg width="100%" height="80%" id="stack-trace-plot">
               <g class="svg-plot">
                 <g class="xAxis"></g>
@@ -86,6 +88,7 @@
         <div class="clearfix"></div>
         <div class="row text-center">
           <div class="col-sm-6 visualization">
+            <form class="target-selectors"></form>
             <svg width="100%" height="80%" id="comparison-plot">
               <g class="svg-plot">
                 <g class="xAxis"></g>
@@ -97,6 +100,7 @@
             <span class="text-muted">Something else</span>
           </div>
           <div class="col-sm-6 visualization">
+            <form class="target-selectors"></form>
             <svg width="100%" height="80%" id="dot-plot">
               <g class="svg-plot">
                 <g class="xAxis"></g>
