graphs are displaying again

--- a/index.html
+++ b/index.html
@@ -60,9 +60,9 @@
 
       <main role="main" class="col-sm-9 ml-sm-auto col-md-10">
         <div class="row text-center">
-          <div class="col-sm-6 visualization">
+          <div id="box-plot" class="col-sm-6 visualization">
             <form class="target-selectors"></form>
-            <svg width="100%" height="80%" id="box-plot">
+            <svg width="100%" height="80%">
               <g class="svg-plot">
                 <g class="xAxis"></g>
                 <g class="yAxis"></g>
@@ -72,9 +72,9 @@
             <h4>Box Plot</h4>
             <div class="text-muted">Something else</div>
           </div>
-          <div class="col-sm-6 visualization">
+          <div id="stack-trace-plot" class="col-sm-6 visualization">
             <form class="target-selectors"></form>
-            <svg width="100%" height="80%" id="stack-trace-plot">
+            <svg width="100%" height="80%">
               <g class="svg-plot">
                 <g class="xAxis"></g>
                 <g class="yAxis"></g>
@@ -87,9 +87,9 @@
         </div>
         <div class="clearfix"></div>
         <div class="row text-center">
-          <div class="col-sm-6 visualization">
+          <div id="comparison-plot" class="col-sm-6 visualization">
             <form class="target-selectors"></form>
-            <svg width="100%" height="80%" id="comparison-plot">
+            <svg width="100%" height="80%">
               <g class="svg-plot">
                 <g class="xAxis"></g>
                 <g class="yAxis"></g>
@@ -99,9 +99,9 @@
             <h4>Comparison</h4>
             <span class="text-muted">Something else</span>
           </div>
-          <div class="col-sm-6 visualization">
+          <div id="dot-plot" class="col-sm-6 visualization">
             <form class="target-selectors"></form>
-            <svg width="100%" height="80%" id="dot-plot">
+            <svg width="100%" height="80%">
               <g class="svg-plot">
                 <g class="xAxis"></g>
                 <g class="yAxis"></g>
