splitting out plots

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
               <g class="svg-plot">
                 <g class="xAxis"></g>
                 <g class="yAxis"></g>
-                <g class="bars"></g>
+                <g class="data"></g>
               </g>
             </svg>
             <h4>Box Plot</h4>
@@ -78,7 +78,7 @@
               <g class="svg-plot">
                 <g class="xAxis"></g>
                 <g class="yAxis"></g>
-                <g class="bars"></g>
+                <g class="data"></g>
               </g>
             </svg>
             <h4>Stack Trace Timing</h4>
@@ -93,7 +93,7 @@
               <g class="svg-plot">
                 <g class="xAxis"></g>
                 <g class="yAxis"></g>
-                <g class="bars"></g>
+                <g class="data"></g>
               </g>
             </svg>
             <h4>Comparison</h4>
@@ -105,7 +105,7 @@
               <g class="svg-plot">
                 <g class="xAxis"></g>
                 <g class="yAxis"></g>
-                <g class="bars"></g>
+                <g class="data"></g>
               </g>
             </svg>
             <h4>Dot Plot</h4>
