moving to from grid of charts to single chart

--- a/charts.html
+++ b/charts.html
@@ -59,17 +59,58 @@
       </nav>
 
       <main role="main" class="col-sm-9 ml-sm-auto col-md-10">
-        <div id="data-plot">
-          <form class="target-selectors"></form>
-          <svg class="visualization">
-            <g class="svg-plot">
-              <g class="xAxis"></g>
-              <g class="yAxis"></g>
-              <g class="data"></g>
-            </g>
-          </svg>
-          <h4>Plot</h4>
-          <div class="text-muted">Something else</div>
+        <div class="row text-center">
+          <div id="box-plot" class="col-sm-6">
+            <form class="target-selectors"></form>
+            <svg class="visualization">
+              <g class="svg-plot">
+                <g class="xAxis"></g>
+                <g class="yAxis"></g>
+                <g class="data"></g>
+              </g>
+            </svg>
+            <h4>Box Plot</h4>
+            <div class="text-muted">Something else</div>
+          </div>
+          <div id="stack-trace-plot" class="col-sm-6">
+            <form class="target-selectors"></form>
+            <svg class="visualization">
+              <g class="svg-plot">
+                <g class="xAxis"></g>
+                <g class="yAxis"></g>
+                <g class="data"></g>
+              </g>
+            </svg>
+            <h4>Stack Trace Timing</h4>
+            <span class="text-muted">Something else</span>
+          </div>
+        </div>
+        <div class="clearfix"></div>
+        <div class="row text-center">
+          <div id="comparison-plot" class="col-sm-6">
+            <form class="target-selectors"></form>
+            <svg class="visualization">
+              <g class="svg-plot">
+                <g class="xAxis"></g>
+                <g class="yAxis"></g>
+                <g class="data"></g>
+              </g>
+            </svg>
+            <h4>Comparison</h4>
+            <span class="text-muted">Something else</span>
+          </div>
+          <div id="dot-plot" class="col-sm-6">
+            <form class="target-selectors"></form>
+            <svg class="visualization">
+              <g class="svg-plot">
+                <g class="xAxis"></g>
+                <g class="yAxis"></g>
+                <g class="data"></g>
+              </g>
+            </svg>
+            <h4>Dot Plot</h4>
+            <span class="text-muted">Something else</span>
+          </div>
         </div>
       </main>
     </div>
