reorganizing the menu bar

--- a/about.html
+++ b/about.html
@@ -28,10 +28,16 @@
 
       <div class="collapse navbar-collapse" id="navbars">
         <ul class="navbar-nav mr-auto">
-          <li class="nav-item active">
+          <li class="nav-item">
             <a class="nav-link" href="/">Dashboard</a>
           </li>
           <li class="nav-item">
+            <a class="nav-link" href="/comparison.html">Compare</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/scatter.html">Scatter</a>
+          </li>
+          <li class="nav-item active">
             <a class="nav-link" href="/about.html">About</a>
           </li>
         </ul>
@@ -50,8 +56,14 @@
         from Bootstrap for the layout. It also utilizes
         <a href="https://d3js.org">D3</a> to render the visualizations.
       </p>
-      <p>Sam Olds, samolds@yahoo.com, u0742533</p>
-      <p>Jesus Zarate jesus.zarate@utah.edu, u0816141</p>
+      <p>
+        <a href="https://github.com/samolds">Sam Olds</a>, samolds@yahoo.com,
+        u0742533
+      </p>
+      <p>
+        <a href="https://github.com/jesuszarate">Jesus Zarate</a>,
+        jesus.zarate@utah.edu, u0816141
+      </p>
     </div>
   </main>
 
