--- a/comparison.html
+++ b/comparison.html
@@ -26,10 +26,10 @@
 
       <div class="collapse navbar-collapse" id="navbars">
         <ul class="navbar-nav mr-auto">
-          <li class="nav-item active">
+          <li class="nav-item">
             <a class="nav-link" href="/">Dashboard</a>
           </li>
-          <li class="nav-item">
+          <li class="nav-item active">
             <a class="nav-link" href="/comparison.html">Compare</a>
           </li>
           <li class="nav-item">
@@ -39,14 +39,43 @@
             <a class="nav-link" href="/about.html">About</a>
           </li>
         </ul>
+        <!--
+        TODO: this would be really nice to be able to search for gubbins
+        <form class="form-inline mt-2 mt-md-0">
+          <input class="form-control mr-sm-2" type="text" placeholder="Search"
+              aria-label="Search">
+          <button class="btn btn-outline-success my-2 my-sm-0"
+              type="submit">Search</button>
+        </form>
+        -->
       </div>
     </nav>
   </header>
 
   <div class="container-fluid">
     <div class="row">
+      <nav class="col-sm-3 col-md-2 d-none d-sm-block bg-light sidebar">
+          <div id="navigator"></div>
+          <img src="static/img/loading2.gif" alt="Loading" id="loading-gif"
+              class="loading-vis center">
+          <div class="text-center top-margin">
+              <button id="plot-clearer" type="button"
+                  class="btn btn-danger">Clear Plots</button>
+          </div>
+      </nav>
+
       <main role="main" class="col-sm-9 ml-sm-auto col-md-10">
-        <div id="grid">
+        <div id="data-plot">
+          <svg class="visualization">
+            <g class="svg-plot">
+              <g class="xAxis"></g>
+              <g class="yAxis"></g>
+              <g class="data"></g>
+            </g>
+          </svg>
+          <h4>Plot</h4>
+          <div class="text-muted">Something else</div>
+          <form class="target-selectors"></form>
         </div>
       </main>
     </div>
