--- a/scatter.html
+++ b/scatter.html
@@ -26,8 +26,14 @@
 
       <div class="collapse navbar-collapse" id="navbars">
         <ul class="navbar-nav mr-auto">
-          <li class="nav-item active">
+          <li class="nav-item">
             <a class="nav-link" href="/">Dashboard</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/comparison.html">Compare</a>
+          </li>
+          <li class="nav-item active">
+            <a class="nav-link" href="/scatter.html">Scatter</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="/about.html">About</a>
