lots of clean up of the comparison page
* added axis
* added draggable legend
* fixed bug with multiple selections,
* better coloration of selections

--- a/comparison.html
+++ b/comparison.html
@@ -66,16 +66,18 @@
 
       <main role="main" class="col-sm-9 ml-sm-auto col-md-10">
         <div id="data-plot">
+          <div class="legend">
+            <h4>Function Executions</h4>
+            <div class="text-muted">Success/Error/Total Counts</div>
+            <table class="target-selectors"></table>
+          </div>
           <svg class="visualization">
             <g class="svg-plot">
-              <g class="xAxis"></g>
-              <g class="yAxis"></g>
+              <g class="x-axis"></g>
+              <g class="y-axis"></g>
               <g class="data"></g>
             </g>
           </svg>
-          <h4>Plot</h4>
-          <div class="text-muted">Something else</div>
-          <form class="target-selectors"></form>
         </div>
       </main>
     </div>
