--- a/scatter.html
+++ b/scatter.html
@@ -70,8 +70,8 @@
             <form class="target-selectors"></form>
             <svg class="visualization">
               <g class="svg-plot">
-                <g class="xAxis"></g>
-                <g class="yAxis"></g>
+                <g class="x-axis"></g>
+                <g class="y-axis"></g>
                 <g class="data"></g>
               </g>
             </svg>
@@ -82,8 +82,8 @@
             <form class="target-selectors"></form>
             <svg class="visualization">
               <g class="svg-plot">
-                <g class="xAxis"></g>
-                <g class="yAxis"></g>
+                <g class="x-axis"></g>
+                <g class="y-axis"></g>
                 <g class="data"></g>
               </g>
             </svg>
@@ -97,8 +97,8 @@
             <form class="target-selectors"></form>
             <svg class="visualization">
               <g class="svg-plot">
-                <g class="xAxis"></g>
-                <g class="yAxis"></g>
+                <g class="x-axis"></g>
+                <g class="y-axis"></g>
                 <g class="data"></g>
               </g>
             </svg>
@@ -109,8 +109,8 @@
             <form class="target-selectors"></form>
             <svg class="visualization">
               <g class="svg-plot">
-                <g class="xAxis"></g>
-                <g class="yAxis"></g>
+                <g class="x-axis"></g>
+                <g class="y-axis"></g>
                 <g class="data"></g>
               </g>
             </svg>
