breaking out comparison plot and scatter plot source

--- a/comparison.html
+++ b/comparison.html
@@ -65,7 +65,7 @@
       </nav>
 
       <main role="main" class="col-sm-9 ml-sm-auto col-md-10">
-        <div id="data-plot">
+        <div id="data-plot" class="graph-group">
           <div class="legend">
             <h4>Function Executions</h4>
             <div class="text-muted">Success/Error/Total Counts</div>
@@ -91,7 +91,7 @@
       type="text/javascript"></script>
 
   <script src="static/js/data.js" type="text/javascript"></script>
-  <script src="static/js/plots.js" type="text/javascript"></script>
+  <script src="static/js/comparison_plots.js" type="text/javascript"></script>
   <script src="static/js/navigator.js" type="text/javascript"></script>
 </body>
 </html>
