--- a/index.html
+++ b/index.html
@@ -45,8 +45,10 @@
 
   <div class="container-fluid">
     <div class="row">
-      <main role="main" class="col-sm-9 ml-sm-auto col-md-10">
-        <div id="grid">
+      <main role="main" class="col-sm-9 ml-sm-auto col-md-12">
+        <div id = "tileChart" class = "view">
+          <div id="legend" class = "view"></div>
+          <div id = "tiles" class = "view"></div>
         </div>
       </main>
     </div>
@@ -60,7 +62,7 @@
       type="text/javascript"></script>
 
   <script src="static/js/data.js" type="text/javascript"></script>
-  <script src="static/js/plots.js" type="text/javascript"></script>
   <script src="static/js/navigator.js" type="text/javascript"></script>
+  <script src="static/js/overview.js" type="text/javascript"></script>
 </body>
 </html>
