cleaning up scatter and comparison charts

--- a/comparison.html
+++ b/comparison.html
@@ -67,6 +67,8 @@
       <main role="main" class="col-sm-9 ml-sm-auto col-md-10">
         <div id="data-plot" class="graph-group">
           <div class="legend">
+            <span class="legend-shower">v</span>
+            <span class="legend-hider">^</span>
             <h4>Function Executions</h4>
             <div class="text-muted">Success/Error/Total Counts</div>
             <table class="target-selectors"></table>
