--- a/scatter.html
+++ b/scatter.html
@@ -65,10 +65,12 @@
       </nav>
 
       <main role="main" class="col-sm-9 ml-sm-auto col-md-10">
-        <div class="row text-center">
-          <div id="box-plot" class="col-sm-6 graph-group">
+        <div class="row">
+          <div id="dot-plot-1" class="col-sm-6 graph-group">
             <div class="legend">
-              <h4>Box Plots</h4>
+              <span class="legend-shower">v</span>
+              <span class="legend-hider">^</span>
+              <h4>Dot Plot 1</h4>
               <div class="text-muted">Success/Error/Total Counts</div>
               <table class="target-selectors"></table>
             </div>
@@ -80,9 +82,11 @@
               </g>
             </svg>
           </div>
-          <div id="stack-trace-plot" class="col-sm-6 graph-group">
+          <div id="dot-plot-2" class="col-sm-6 graph-group">
             <div class="legend">
-              <h4>Stack Trace Timing</h4>
+              <span class="legend-shower">v</span>
+              <span class="legend-hider">^</span>
+              <h4>Dot Plot 2</h4>
               <div class="text-muted">Success/Error/Total Counts</div>
               <table class="target-selectors"></table>
             </div>
@@ -96,10 +100,12 @@
           </div>
         </div>
         <div class="clearfix"></div>
-        <div class="row text-center">
-          <div id="comparison-plot" class="col-sm-6 graph-group">
+        <div class="row">
+          <div id="dot-plot-3" class="col-sm-6 graph-group">
             <div class="legend">
-              <h4>Comparison</h4>
+              <span class="legend-shower">v</span>
+              <span class="legend-hider">^</span>
+              <h4>Dot Plot 3</h4>
               <div class="text-muted">Success/Error/Total Counts</div>
               <table class="target-selectors"></table>
             </div>
@@ -111,9 +117,11 @@
               </g>
             </svg>
           </div>
-          <div id="dot-plot" class="col-sm-6 graph-group">
+          <div id="dot-plot-4" class="col-sm-6 graph-group">
             <div class="legend">
-              <h4>Dot Plot</h4>
+              <span class="legend-shower">v</span>
+              <span class="legend-hider">^</span>
+              <h4>Dot Plot 4</h4>
               <div class="text-muted">Success/Error/Total Counts</div>
               <table class="target-selectors"></table>
             </div>
