renaming plots pages

--- a/plots.html
+++ b/plots.html
@@ -30,10 +30,10 @@
             <a class="nav-link" href="/">Dashboard</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/comparison.html">Compare</a>
+            <a class="nav-link" href="/linechart.html">Linechart</a>
           </li>
           <li class="nav-item active">
-            <a class="nav-link" href="/scatter.html">Scatter</a>
+            <a class="nav-link" href="/plots.html">Plots</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="/about.html">About</a>
@@ -66,11 +66,11 @@
 
       <main role="main" class="col-sm-9 ml-sm-auto col-md-10">
         <div class="row">
-          <div id="dot-plot-1" class="col-sm-6 graph-group">
+          <div id="plot-1" class="col-sm-6 graph-group">
             <div class="legend">
               <span class="legend-shower">v</span>
               <span class="legend-hider">^</span>
-              <h4>Dot Plot 1</h4>
+              <h4>Plot 1</h4>
               <div class="text-muted">Success/Error/Total Counts</div>
               <table class="target-selectors"></table>
             </div>
@@ -82,11 +82,11 @@
               </g>
             </svg>
           </div>
-          <div id="dot-plot-2" class="col-sm-6 graph-group">
+          <div id="plot-2" class="col-sm-6 graph-group">
             <div class="legend">
               <span class="legend-shower">v</span>
               <span class="legend-hider">^</span>
-              <h4>Dot Plot 2</h4>
+              <h4>Plot 2</h4>
               <div class="text-muted">Success/Error/Total Counts</div>
               <table class="target-selectors"></table>
             </div>
@@ -101,11 +101,11 @@
         </div>
         <div class="clearfix"></div>
         <div class="row">
-          <div id="dot-plot-3" class="col-sm-6 graph-group">
+          <div id="plot-3" class="col-sm-6 graph-group">
             <div class="legend">
               <span class="legend-shower">v</span>
               <span class="legend-hider">^</span>
-              <h4>Dot Plot 3</h4>
+              <h4>Plot 3</h4>
               <div class="text-muted">Success/Error/Total Counts</div>
               <table class="target-selectors"></table>
             </div>
@@ -117,11 +117,11 @@
               </g>
             </svg>
           </div>
-          <div id="dot-plot-4" class="col-sm-6 graph-group">
+          <div id="plot-4" class="col-sm-6 graph-group">
             <div class="legend">
               <span class="legend-shower">v</span>
               <span class="legend-hider">^</span>
-              <h4>Dot Plot 4</h4>
+              <h4>Plot 4</h4>
               <div class="text-muted">Success/Error/Total Counts</div>
               <table class="target-selectors"></table>
             </div>
@@ -146,7 +146,7 @@
       type="text/javascript"></script>
 
   <script src="static/js/data.js" type="text/javascript"></script>
-  <script src="static/js/scatter_plots.js" type="text/javascript"></script>
+  <script src="static/js/plots.js" type="text/javascript"></script>
   <script src="static/js/navigator.js" type="text/javascript"></script>
 </body>
 </html>
