--- a/about.html
+++ b/about.html
@@ -32,10 +32,10 @@
             <a class="nav-link" href="/">Dashboard</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/comparison.html">Compare</a>
+            <a class="nav-link" href="/linechart.html">Linechart</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/scatter.html">Scatter</a>
+            <a class="nav-link" href="/plots.html">Plots</a>
           </li>
           <li class="nav-item active">
             <a class="nav-link" href="/about.html">About</a>
