--- a/linechart.html
+++ b/linechart.html
@@ -30,10 +30,10 @@
             <a class="nav-link" href="/">Dashboard</a>
           </li>
           <li class="nav-item active">
-            <a class="nav-link" href="/comparison.html">Compare</a>
+            <a class="nav-link" href="/linechart.html">Linechart</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/scatter.html">Scatter</a>
+            <a class="nav-link" href="/plots.html">Plots</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="/about.html">About</a>
@@ -60,7 +60,7 @@
               class="loading-vis center">
           <div class="text-center top-margin">
               <button id="plot-clearer" type="button"
-                  class="btn btn-danger">Clear Plots</button>
+                  class="btn btn-danger">Clear Plot</button>
           </div>
       </nav>
 
@@ -93,7 +93,7 @@
       type="text/javascript"></script>
 
   <script src="static/js/data.js" type="text/javascript"></script>
-  <script src="static/js/comparison_plots.js" type="text/javascript"></script>
+  <script src="static/js/linechart.js" type="text/javascript"></script>
   <script src="static/js/navigator.js" type="text/javascript"></script>
 </body>
 </html>
