Added more data to pop up windows and styled it a bit.

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <link href="static/vendor/css/bootstrap4.min.css" rel="stylesheet">
   <link href="static/vendor/css/dashboard.css" rel="stylesheet">
   <link href="static/vendor/css/googlefonts.css" rel="stylesheet">
+   <!--<script type="text/javascript" src="bower_components/d3/d3.js"></script>-->
   <link href="static/css/style.css" rel="stylesheet">
 </head>
 
