--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <link href="static/vendor/css/bootstrap4.min.css" rel="stylesheet">
   <link href="static/vendor/css/dashboard.css" rel="stylesheet">
   <link href="static/vendor/css/googlefonts.css" rel="stylesheet">
-   <!--<script type="text/javascript" src="bower_components/d3/d3.js"></script>-->
+  <!--<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/d3-legend/2.9.0/d3-legend.js"></script>-->
   <link href="static/css/style.css" rel="stylesheet">
 </head>
 
@@ -48,8 +48,8 @@
     <div class="row">
       <main role="main" class="col-sm-9 ml-sm-auto col-md-12">
         <div id = "tileChart" class = "view">
-          <div id="legend" class = "view"></div>
           <div id = "tiles" class = "view"></div>
+          <div id="legend" class = "view"></div>
         </div>
       </main>
     </div>
