Bubble vis done. No dragover yet.

--- a/index.html
+++ b/index.html
@@ -31,6 +31,9 @@
             <a class="nav-link" href="/">Dashboard</a>
           </li>
           <li class="nav-item">
+            <a class="nav-link" href="/bubbletotals.html">Totals Overview</a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link" href="/linechart.html">Linechart</a>
           </li>
           <li class="nav-item">
