--- a/linechart.html
+++ b/linechart.html
@@ -29,6 +29,9 @@
           <li class="nav-item">
             <a class="nav-link" href="/">Dashboard</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/bubbletotals.html">Totals Overview</a>
+          </li>
           <li class="nav-item active">
             <a class="nav-link" href="/linechart.html">Linechart</a>
           </li>
