Bubble vis done. No dragover yet.

--- a/bubbletotals.html
+++ b/bubbletotals.html
@@ -48,9 +48,13 @@
 </header>
 
 <div class="container-fluid">
-
-  <div id = "bubbles" class = "view"></div>
-
+  <div class="row">
+    <main role="main" class="col-sm-9 ml-sm-auto col-md-12">
+      <div id = "bubbles" class = "view">
+        <div id = "tiles" class = "view"></div>
+      </div>
+    </main>
+  </div>
 </div>
 
 <script src="static/js/data.js" type="text/javascript"></script>
@@ -58,3 +62,4 @@
 <script src="static/js/overview.js" type="text/javascript"></script>
 </body>
 </html>
+
