--- a/index.html
+++ b/index.html
@@ -1,71 +1,92 @@
 <!doctype html>
 <html lang="en">
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport"
-      content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta name="description" content="Monkit Data Visualizations">
-  <meta name="author" content="Sam Olds, Jesus Zarate">
+    <meta charset="utf-8">
+    <meta name="viewport"
+          content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="description" content="Monkit Data Visualizations">
+    <meta name="author" content="Sam Olds, Jesus Zarate">
 
-  <title>d3tiknom</title>
-  <link href="static/vendor/css/bootstrap4.min.css" rel="stylesheet">
-  <link href="static/vendor/css/dashboard.css" rel="stylesheet">
-  <link href="static/vendor/css/googlefonts.css" rel="stylesheet">
-  <!--<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/d3-legend/2.9.0/d3-legend.js"></script>-->
-  <link href="static/css/style.css" rel="stylesheet">
+    <title>d3tiknom</title>
+    <link href="static/vendor/css/bootstrap4.min.css" rel="stylesheet">
+    <link href="static/vendor/css/dashboard.css" rel="stylesheet">
+    <link href="static/vendor/css/googlefonts.css" rel="stylesheet">
+    <!--<script type="text/javascript" src="bower_components/d3/d3.js"></script>-->
+    <link href="static/css/style.css" rel="stylesheet">
 </head>
 
 <body>
-  <header>
+<header>
     <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
-      <a class="navbar-brand" href="/">d3tiknom</a>
-      <button class="navbar-toggler d-lg-none" type="button"
-          data-toggle="collapse" data-target="#navbars" aria-controls="navbars"
-          aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
+        <a class="navbar-brand" href="/">d3tiknom</a>
+        <button class="navbar-toggler d-lg-none" type="button"
+                data-toggle="collapse" data-target="#navbars" aria-controls="navbars"
+                aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
 
-      <div class="collapse navbar-collapse" id="navbars">
-        <ul class="navbar-nav mr-auto">
-          <li class="nav-item active">
-            <a class="nav-link" href="/">Dashboard</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="/bubbletotals.html">Totals Overview</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="/linechart.html">Linechart</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="/plots.html">Plots</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="/about.html">About</a>
-          </li>
-        </ul>
-      </div>
-    </nav>
-  </header>
+        <div class="collapse navbar-collapse" id="navbars">
+            <ul class="navbar-nav mr-auto">
+                <li class="nav-item active">
+                    <a class="nav-link" href="/">Dashboard</a>
+                </li>
 
-  <div class="container-fluid">
-    <div class="row">
-      <main role="main" class="col-sm-9 ml-sm-auto col-md-12">
-        <div id = "tileChart" class = "view">
-          <div id = "tiles" class = "view"></div>
-          <div id="legend" class = "view"></div>
+                <li class="nav-item">
+                    <a class="nav-link" href="/comparison.html">Compare</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/scatter.html">Scatter</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/about.html">About</a>
+                </li>
+            </ul>
         </div>
-      </main>
+    </nav>
+</header>
+
+<div class="container-fluid">
+
+    <div class="row">
+        <div class="blt center">
+            <h2 class="blu">Overview</h2>
+        </div>
     </div>
-  </div>
+    <div class="row">
 
-  <script src="static/vendor/js/d3.min.js" type="text/javascript"></script>
-  <script src="static/vendor/js/d3-tip.js" type="text/javascript"></script>
-  <script src="static/vendor/js/jquery-3.2.1.slim.min.js"
-      type="text/javascript"></script>
-  <script src="static/vendor/js/bootstrap4.bundle.min.js"
-      type="text/javascript"></script>
+        <div class="btn-group center">
+            <button class="btn btn-primary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown"
+                    aria-haspopup="true" aria-expanded="false">
+                View Type
+            </button>
+            <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                <a class="dropdown-item" onclick="viewType('tiles')">Tiles</a>
+                <a class="dropdown-item" onclick="viewType('bubble')">Bubble</a>
+            </div>
+        </div>
 
-  <script src="static/js/data.js" type="text/javascript"></script>
-  <script src="static/js/overview.js" type="text/javascript"></script>
+    </div>
+
+    <br>
+    <div class="row">
+        <main role="main" class="col-sm-9 ml-sm-auto col-md-12">
+            <div id="tileChart" class="view">
+                <div id="legend" class="view"></div>
+                <div id="tiles" class="view"></div>
+            </div>
+        </main>
+    </div>
+</div>
+
+<script src="static/vendor/js/d3.min.js" type="text/javascript"></script>
+<script src="static/vendor/js/d3-tip.js" type="text/javascript"></script>
+<script src="static/vendor/js/jquery-3.2.1.slim.min.js"
+        type="text/javascript"></script>
+<script src="static/vendor/js/bootstrap4.bundle.min.js"
+        type="text/javascript"></script>
+
+<script src="static/js/data.js" type="text/javascript"></script>
+<script src="static/js/navigator.js" type="text/javascript"></script>
+<script src="static/js/overview.js" type="text/javascript"></script>
 </body>
 </html>
