--- a/index.html
+++ b/index.html
@@ -27,15 +27,14 @@
 
         <div class="collapse navbar-collapse" id="navbars">
             <ul class="navbar-nav mr-auto">
-                <li class="nav-item active">
+                <li class="nav-item">
                     <a class="nav-link" href="/">Dashboard</a>
                 </li>
-
-                <li class="nav-item">
-                    <a class="nav-link" href="/comparison.html">Compare</a>
+                <li class="nav-item active">
+                    <a class="nav-link" href="/linechart.html">Linechart</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/scatter.html">Scatter</a>
+                    <a class="nav-link" href="/plots.html">Plots</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="/about.html">About</a>
