--- a/linechart.html
+++ b/linechart.html
@@ -39,15 +39,13 @@
             <a class="nav-link" href="/about.html">About</a>
           </li>
         </ul>
-        <!--
-        TODO: this would be really nice to be able to search for gubbins
-        <form class="form-inline mt-2 mt-md-0">
-          <input class="form-control mr-sm-2" type="text" placeholder="Search"
-              aria-label="Search">
-          <button class="btn btn-outline-success my-2 my-sm-0"
-              type="submit">Search</button>
+
+        <form class="form-inline mt-2 mt-md-0" action="linechart.html" method="GET">
+          <input class="form-control mr-sm-2" placeholder="Search"
+              aria-label="Search" name="search">
+          <button class="btn btn-outline-success my-2 my-sm-0">Search</button>
         </form>
-        -->
+
       </div>
     </nav>
   </header>
