--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body>
 <header>
     <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
-        <a class="navbar-brand" href="/">d3tiknom</a>
+        <a class="navbar-brand" href="index.html">d3tiknom</a>
         <button class="navbar-toggler d-lg-none" type="button"
                 data-toggle="collapse" data-target="#navbars" aria-controls="navbars"
                 aria-expanded="false" aria-label="Toggle navigation">
@@ -42,6 +42,7 @@
             </ul>
         </div>
     </nav>
+
 </header>
 
 <div class="container-fluid">
@@ -63,7 +64,6 @@
                 <a class="dropdown-item" onclick="viewType('bubble')">Bubble</a>
             </div>
         </div>
-
     </div>
 
     <br>
@@ -75,17 +75,22 @@
             </div>
         </main>
     </div>
-</div>
+    <div class="row">
+        <div class="col-sm-3 col-md-2 d-none d-sm-block center">
+            <img src="static/img/loading2.gif" alt="Loading" id="loading-gif"
+                 class="loading-vis center">
+        </div>
+    </div>
 
-<script src="static/vendor/js/d3.min.js" type="text/javascript"></script>
-<script src="static/vendor/js/d3-tip.js" type="text/javascript"></script>
-<script src="static/vendor/js/jquery-3.2.1.slim.min.js"
-        type="text/javascript"></script>
-<script src="static/vendor/js/bootstrap4.bundle.min.js"
-        type="text/javascript"></script>
+    <script src="static/vendor/js/d3.min.js" type="text/javascript"></script>
+    <script src="static/vendor/js/d3-tip.js" type="text/javascript"></script>
+    <script src="static/vendor/js/jquery-3.2.1.slim.min.js"
+            type="text/javascript"></script>
+    <script src="static/vendor/js/bootstrap4.bundle.min.js"
+            type="text/javascript"></script>
 
-<script src="static/js/data.js" type="text/javascript"></script>
-<script src="static/js/navigator.js" type="text/javascript"></script>
-<script src="static/js/overview.js" type="text/javascript"></script>
+    <script src="static/js/data.js" type="text/javascript"></script>
+    <script src="static/js/navigator.js" type="text/javascript"></script>
+    <script src="static/js/overview.js" type="text/javascript"></script>
 </body>
 </html>
