--- a/linechart.html
+++ b/linechart.html
@@ -17,7 +17,7 @@
 <body>
   <header>
     <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
-      <a class="navbar-brand" href="/">d3tiknom</a>
+      <a class="navbar-brand" href="index.html">d3tiknom</a>
       <button class="navbar-toggler d-lg-none" type="button"
           data-toggle="collapse" data-target="#navbars" aria-controls="navbars"
           aria-expanded="false" aria-label="Toggle navigation">
