updating paths to work with github pages

--- a/linechart.html
+++ b/linechart.html
@@ -8,16 +8,16 @@
   <meta name="author" content="Sam Olds, Jesus Zarate">
 
   <title>d3tiknom</title>
-  <link href="static/vendor/css/bootstrap4.min.css" rel="stylesheet">
-  <link href="static/vendor/css/dashboard.css" rel="stylesheet">
-  <link href="static/vendor/css/googlefonts.css" rel="stylesheet">
-  <link href="static/css/style.css" rel="stylesheet">
+  <link href="/d3tiknom/static/vendor/css/bootstrap4.min.css" rel="stylesheet">
+  <link href="/d3tiknom/static/vendor/css/dashboard.css" rel="stylesheet">
+  <link href="/d3tiknom/static/vendor/css/googlefonts.css" rel="stylesheet">
+  <link href="/d3tiknom/static/css/style.css" rel="stylesheet">
 </head>
 
 <body>
   <header>
     <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
-      <a class="navbar-brand" href="index.html">d3tiknom</a>
+      <a class="navbar-brand" href="/d3tiknom/">d3tiknom</a>
       <button class="navbar-toggler d-lg-none" type="button"
           data-toggle="collapse" data-target="#navbars" aria-controls="navbars"
           aria-expanded="false" aria-label="Toggle navigation">
@@ -27,16 +27,16 @@
       <div class="collapse navbar-collapse" id="navbars">
         <ul class="navbar-nav mr-auto">
           <li class="nav-item">
-            <a class="nav-link" href="/">Dashboard</a>
+            <a class="nav-link" href="/d3tiknom/">Dashboard</a>
           </li>
           <li class="nav-item active">
-            <a class="nav-link" href="/linechart.html">Linechart</a>
+            <a class="nav-link" href="/d3tiknom/linechart.html">Linechart</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/plots.html">Plots</a>
+            <a class="nav-link" href="/d3tiknom/plots.html">Plots</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/about.html">About</a>
+            <a class="nav-link" href="/d3tiknom/about.html">About</a>
           </li>
         </ul>
 
@@ -54,7 +54,7 @@
     <div class="row">
       <nav class="col-sm-3 col-md-2 d-none d-sm-block bg-light sidebar">
           <div id="navigator"></div>
-          <img src="static/img/loading2.gif" alt="Loading" id="loading-gif"
+          <img src="/d3tiknom/static/img/loading2.gif" alt="Loading" id="loading-gif"
               class="loading-vis center">
           <div class="text-center top-margin">
               <button id="plot-clearer" type="button"
@@ -83,15 +83,15 @@
     </div>
   </div>
 
-  <script src="static/vendor/js/d3.min.js" type="text/javascript"></script>
-  <script src="static/vendor/js/d3-tip.js" type="text/javascript"></script>
-  <script src="static/vendor/js/jquery-3.2.1.slim.min.js"
+  <script src="/d3tiknom/static/vendor/js/d3.min.js" type="text/javascript"></script>
+  <script src="/d3tiknom/static/vendor/js/d3-tip.js" type="text/javascript"></script>
+  <script src="/d3tiknom/static/vendor/js/jquery-3.2.1.slim.min.js"
       type="text/javascript"></script>
-  <script src="static/vendor/js/bootstrap4.bundle.min.js"
+  <script src="/d3tiknom/static/vendor/js/bootstrap4.bundle.min.js"
       type="text/javascript"></script>
 
-  <script src="static/js/data.js" type="text/javascript"></script>
-  <script src="static/js/linechart.js" type="text/javascript"></script>
-  <script src="static/js/navigator.js" type="text/javascript"></script>
+  <script src="/d3tiknom/static/js/data.js" type="text/javascript"></script>
+  <script src="/d3tiknom/static/js/linechart.js" type="text/javascript"></script>
+  <script src="/d3tiknom/static/js/navigator.js" type="text/javascript"></script>
 </body>
 </html>
