--- a/about.html
+++ b/about.html
@@ -8,9 +8,9 @@
   <meta name="author" content="Sam Olds, Jesus Zarate">
 
   <title>d3tiknom</title>
-  <link href="static/vendor/css/bootstrap4.min.css" rel="stylesheet">
-  <link href="static/vendor/css/dashboard.css" rel="stylesheet">
-  <link href="static/css/style.css" rel="stylesheet">
+  <link href="/d3tiknom/static/vendor/css/bootstrap4.min.css" rel="stylesheet">
+  <link href="/d3tiknom/static/vendor/css/dashboard.css" rel="stylesheet">
+  <link href="/d3tiknom/static/css/style.css" rel="stylesheet">
 
   <link href="https://fonts.googleapis.com/css?family=Arvo" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
@@ -19,7 +19,7 @@
 <body>
   <header>
     <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
-      <a class="navbar-brand" href="/">d3tiknom</a>
+      <a class="navbar-brand" href="/d3tiknom/">d3tiknom</a>
       <button class="navbar-toggler d-lg-none" type="button"
           data-toggle="collapse" data-target="#navbars" aria-controls="navbars"
           aria-expanded="false" aria-label="Toggle navigation">
@@ -29,16 +29,16 @@
       <div class="collapse navbar-collapse" id="navbars">
         <ul class="navbar-nav mr-auto">
           <li class="nav-item">
-            <a class="nav-link" href="/">Dashboard</a>
+            <a class="nav-link" href="/d3tiknom/">Dashboard</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/linechart.html">Linechart</a>
+            <a class="nav-link" href="/d3tiknom/linechart.html">Linechart</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/plots.html">Plots</a>
+            <a class="nav-link" href="/d3tiknom/plots.html">Plots</a>
           </li>
           <li class="nav-item active">
-            <a class="nav-link" href="/about.html">About</a>
+            <a class="nav-link" href="/d3tiknom/about.html">About</a>
           </li>
         </ul>
       </div>
@@ -67,9 +67,9 @@
     </div>
   </main>
 
-  <script src="static/vendor/js/jquery-3.2.1.slim.min.js"
+  <script src="/d3tiknom/static/vendor/js/jquery-3.2.1.slim.min.js"
       type="text/javascript"></script>
-  <script src="static/vendor/js/bootstrap4.bundle.min.js"
+  <script src="/d3tiknom/static/vendor/js/bootstrap4.bundle.min.js"
       type="text/javascript"></script>
 </body>
 </html>
