adding youtube overview embed

--- a/about.html
+++ b/about.html
@@ -89,7 +89,10 @@
       <hr>
 
       <h3>Required Artifacts</h3>
-      <p>The <a href="#">screencast</a> of this project.</p>
+      <div class="video-wrapper">
+        <iframe src="https://www.youtube.com/embed/ZYEL9FXcTmE" frameborder="0"
+          gesture="media" allow="encrypted-media" allowfullscreen></iframe>
+      </div>
       <p>The <a href="#">process book</a>.</p>
       <hr>
 
